Traducido archivo howto/clinic (#2372)
Closes #1891

---------

Co-authored-by: Cristián Maureira-Fredes <Cristian.Maureira-Fredes@qt.io>
Co-authored-by: rtobar <rtobarc@gmail.com>

--- a/howto/clinic.po
+++ b/howto/clinic.po
@@ -11,19 +11,20 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-11-26 15:23+0100\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-04-11 17:45-0400\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/howto/clinic.rst:5
 msgid "Argument Clinic How-To"
-msgstr "*How-To* Argument Clinic"
+msgstr "Argument Clinic Cómo Hacerlo"
 
 #: ../Doc/howto/clinic.rst
 msgid "author"
@@ -31,7 +32,7 @@ msgstr "autor"
 
 #: ../Doc/howto/clinic.rst:7
 msgid "Larry Hastings"
-msgstr "*Larry Hastings*"
+msgstr "Larry Hastings"
 
 msgid "Abstract"
 msgstr "Resumen"
@@ -138,9 +139,9 @@ msgid ""
 "builtin.  With Argument Clinic, that's a thing of the past!"
 msgstr ""
 "Finalmente, la motivación original de Argument Clinic era proporcionar "
-"\"signaturas\" de introspección para las incorporaciones de CPython. Solía "
-"ser, las funciones de consulta de introspección lanzarían una excepción si "
-"pasaba un archivo incorporado. ¡Con Argument Clinic, eso es cosa del pasado!"
+"\"firmas\" de introspección para las incorporaciones de CPython. Solía ser, "
+"las funciones de consulta de introspección lanzarían una excepción si pasaba "
+"un archivo incorporado. ¡Con Argument Clinic, eso es cosa del pasado!"
 
 #: ../Doc/howto/clinic.rst:70
 msgid ""
@@ -260,7 +261,7 @@ msgid ""
 "*checksum line*."
 msgstr ""
 "La última línea (``/*[clinic end generated code: checksum=...]*/``) es la "
-"*línea de suma de comprobación* (*chemsum line*)."
+"*línea de suma de comprobación* (*checksum line*)."
 
 #: ../Doc/howto/clinic.rst:134
 msgid "In between the start line and the end line is the *input*."
@@ -367,7 +368,7 @@ msgstr ""
 #: ../Doc/howto/clinic.rst:188
 msgid "Add the following boilerplate above the function, creating our block::"
 msgstr ""
-"Agrega la siguiente plantilla sobre la función, creando nuestro bloque ::"
+"Agrega la siguiente plantilla sobre la función, creando nuestro bloque::"
 
 #: ../Doc/howto/clinic.rst:193
 msgid ""
@@ -431,7 +432,7 @@ msgid ""
 msgstr ""
 "Sobre el docstring, ingrese el nombre de la función, seguido de una línea en "
 "blanco. Este debería ser el nombre de Python de la función, y debería ser la "
-"ruta de puntos completa a la función; debería comenzar con el nombre del "
+"ruta de puntos completa a la función—debería comenzar con el nombre del "
 "módulo, incluir cualquier submódulo y, si la función es un método en una "
 "clase, debe incluir el nombre de la clase también."
 
@@ -637,7 +638,7 @@ msgstr ""
 "Guarde y cierre el archivo, luego ejecute ``Tools/clinic/clinic.py`` en él. "
 "¡Con suerte, todo funcionó --- su bloque ahora tiene salida y se ha generado "
 "un archivo ``.c.h`` ! Vuelva a abrir el archivo en su editor de texto para "
-"ver:"
+"ver::"
 
 #: ../Doc/howto/clinic.rst:411
 msgid ""
@@ -657,7 +658,7 @@ msgid ""
 msgstr ""
 "Para facilitar la lectura, la mayor parte del código de pegamento se ha "
 "generado en un archivo ``.c.h``. Deberá incluir eso en su archivo ``.c`` "
-"original, generalmente justo después del bloque del módulo de la clínica:"
+"original, generalmente justo después del bloque del módulo de la clínica::"
 
 #: ../Doc/howto/clinic.rst:421
 msgid ""
@@ -766,7 +767,7 @@ msgid ""
 "like this::"
 msgstr ""
 "Reiteremos, solo porque es un poco extraño. Su código ahora debería verse "
-"así:"
+"así::"
 
 #: ../Doc/howto/clinic.rst:477
 msgid ""
@@ -916,7 +917,7 @@ msgid ""
 "``pickle.Pickler.dump``, it'd look like this::"
 msgstr ""
 "Por ejemplo, si quisiéramos cambiar el nombre de las funciones de C "
-"generadas para ``pickle.Pickler.dump``, se vería así:"
+"generadas para ``pickle.Pickler.dump``, se vería así::"
 
 #: ../Doc/howto/clinic.rst:593
 msgid ""
@@ -1071,7 +1072,7 @@ msgstr ""
 "los parámetros que desea agrupar y un ``]`` en una línea después de estos "
 "parámetros. Como ejemplo, así es como ``curses.window.addch`` usa grupos "
 "opcionales para hacer que los primeros dos parámetros y el último parámetro "
-"sean opcionales:"
+"sean opcionales::"
 
 #: ../Doc/howto/clinic.rst:697
 msgid "Notes:"
@@ -1723,7 +1724,7 @@ msgid ""
 "converter::"
 msgstr ""
 "Como ejemplo, aquí está nuestra muestra ``pickle.Pickler.dump`` usando el "
-"convertidor adecuado:"
+"convertidor adecuado::"
 
 #: ../Doc/howto/clinic.rst:878
 msgid ""
@@ -2234,7 +2235,7 @@ msgid ""
 "the C code::"
 msgstr ""
 "Como ejemplo, aquí hay un bloque de Python que agrega una variable entera "
-"estática al código C ::"
+"estática al código C::"
 
 #: ../Doc/howto/clinic.rst:1155
 msgid "Using a \"self converter\""
@@ -2286,7 +2287,7 @@ msgid ""
 msgstr ""
 "Por otro lado, si tiene muchas funciones que usarán el mismo tipo para "
 "``self``, es mejor crear su propio convertidor, subclasificando "
-"``self_converter`` pero sobrescribiendo el miembro ``type``:"
+"``self_converter`` pero sobrescribiendo el miembro ``type``::"
 
 #: ../Doc/howto/clinic.rst:1207
 msgid "Using a \"defining class\" converter"
@@ -2361,11 +2362,11 @@ msgid ""
 "`PyModule_GetState` to fetch the module state.  Example from the "
 "``setattro`` slot method in ``Modules/_threadmodule.c``::"
 msgstr ""
-"No es posible usar ``defining_class`` con métodos de ranura (*slot*). Para "
-"obtener el estado del módulo de dichos métodos, use "
-"``_PyType_GetModuleByDef`` para buscar el módulo y luego :c:func:"
-"`PyModule_GetState` para buscar el estado del módulo. Ejemplo del método de "
-"ranura ``setattro`` en ``Modules/_threadmodule.c``:"
+"No es posible usar ``defining_class`` con métodos de ranura. Para obtener el "
+"estado del módulo de dichos métodos, use :c:func:`PyType_GetModuleByDef` "
+"para buscar el módulo y luego :c:func:`PyModule_GetState` para buscar el "
+"estado del módulo. Ejemplo del método de ranura ``setattro`` en ``Modules/"
+"_threadmodule.c``::"
 
 #: ../Doc/howto/clinic.rst:1266
 msgid "See also :pep:`573`."
@@ -2482,6 +2483,13 @@ msgid ""
 "about the \"use\" of the uninitialized value.  This value should always be a "
 "non-empty string."
 msgstr ""
+"El valor por defecto utilizado para inicializar la variable C cuando no hay "
+"un valor por defecto, pero no especificar un valor por defecto puede dar "
+"lugar a una advertencia de \"variable no inicializada\". Esto puede ocurrir "
+"fácilmente cuando se utilizan grupos de opciones—aunque un código bien "
+"escrito nunca utilizará este valor, la variable se pasa a la impl, y el "
+"compilador de C se quejará del \"uso\" del valor no inicializado. Este valor "
+"debe ser siempre una cadena no vacía."
 
 #: ../Doc/howto/clinic.rst:1325
 msgid "The name of the C converter function, as a string."
@@ -2498,7 +2506,7 @@ msgid ""
 "name of the variable when passing it into the impl function."
 msgstr ""
 "Un valor booleano. Si es verdadero, Argument Clinic agregará un ``&`` "
-"delante del nombre de la variable al pasarlo a la función *impl*."
+"delante del nombre de la variable al pasarlo a la función impl."
 
 #: ../Doc/howto/clinic.rst:1336
 msgid "``parse_by_reference``"
@@ -2518,7 +2526,7 @@ msgid ""
 "c``::"
 msgstr ""
 "Aquí está el ejemplo más simple de un convertidor personalizado, de "
-"``Modules/zlibmodule.c``:"
+"``Modules/zlibmodule.c``::"
 
 #: ../Doc/howto/clinic.rst:1349
 #, fuzzy
@@ -2530,8 +2538,8 @@ msgid ""
 "automatically support default values."
 msgstr ""
 "Este bloque agrega un convertidor a Argument Clinic llamado ``ssize_t``. Los "
-"parámetros declarados como ``ssize_t`` se declararán como tipo "
-"``Py_ssize_t`` y serán analizados por la unidad de formato ``'O&'``, que "
+"parámetros declarados como ``ssize_t`` se declararán como tipo :c:type:"
+"`Py_ssize_t`, y serán analizados por la unidad de formato ``'O&'``, que "
 "llamará a la función de conversión ``ssize_t_converter``. Las variables "
 "``ssize_t`` admiten automáticamente los valores predeterminados."
 
@@ -2587,7 +2595,7 @@ msgid ""
 msgstr ""
 "Para convertir una función usando ``METH_O``, asegúrese de que el único "
 "argumento de la función esté usando el convertidor de ``object`` y marque "
-"los argumentos como solo posicional:"
+"los argumentos como solo posicional::"
 
 #: ../Doc/howto/clinic.rst:1389
 msgid ""
@@ -3231,7 +3239,7 @@ msgid ""
 msgstr ""
 "Si está convirtiendo una función que no está disponible en todas las "
 "plataformas, hay un truco que puede usar para hacer la vida un poco más "
-"fácil. El código existente probablemente se ve así:"
+"fácil. El código existente probablemente se ve así::"
 
 #: ../Doc/howto/clinic.rst:1714
 msgid ""
@@ -3247,7 +3255,7 @@ msgid ""
 "the ``#ifdef``, like so::"
 msgstr ""
 "En este escenario, debe encerrar el cuerpo de su función *impl* dentro de "
-"``#ifdef``, así:"
+"``#ifdef``, así::"
 
 #: ../Doc/howto/clinic.rst:1737
 msgid ""
@@ -3286,7 +3294,7 @@ msgstr ""
 "Aquí es donde Argument Clinic se vuelve muy inteligente. De hecho, detecta "
 "que el bloqueo de Argument Clinic podría estar desactivado por el "
 "``#ifdef``. Cuando eso sucede, genera un pequeño código adicional que se ve "
-"así:"
+"así::"
 
 #: ../Doc/howto/clinic.rst:1760
 msgid ""
