Traducido howto/curses.po

--- a/howto/curses.po
+++ b/howto/curses.po
@@ -579,12 +579,12 @@ msgid ""
 "window's :attr:`encoding` attribute; this defaults to the default system "
 "encoding as returned by :func:`locale.getencoding`."
 msgstr ""
-"El método `:meth:~curses.window.addstr` toma una cadena de texto en Python "
+"El método :meth:`~curses.window.addstr` toma una cadena de texto en Python "
 "como valor para mostrar en pantalla. Los contenidos de las cadenas de texto "
 "en bytes son enviados directamente al terminal. Las cadenas de texto son "
-"codificadas en bytes utilizando el valor del atributo `:attr:encoding` de la "
+"codificadas en bytes utilizando el valor del atributo :attr:`encoding` de la "
 "ventana; por defecto esto utiliza la codificación del sistema como lo "
-"devuelve la función `:func:locale.getencoding`."
+"devuelve la función :func:`locale.getencoding`."
 
 #: ../Doc/howto/curses.rst:304
 msgid ""
@@ -1064,7 +1064,7 @@ msgid ""
 "applications-with-urwid>`_: video of a PyCon CA 2012 talk demonstrating some "
 "applications written using Urwid."
 msgstr ""
-"`\"Console Applications with Urwid\" <http://www.pyvideo.org/video/1568/"
+"`\"Console Applications with Urwid\" <https://www.pyvideo.org/video/1568/"
 "console-applications-with-urwid>`_: video de una charla en PyCon CA 2012 que "
 "muestra algunas aplicaciones escritas usando Urwid."
 
