--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -279,7 +279,7 @@ msgid ""
 msgstr ""
 "Este tipo tiene un solo valor. Hay un solo objeto con este valor. Se accede "
 "a este objeto a través del nombre integrado ``NotImplemented``. Los métodos "
-"numéricos y los métodos de comparación enriquecidos deben devolver este "
+"numéricos y los métodos de comparación enriquecidos deben retornar este "
 "valor si no implementan la operación para los operandos proporcionados. (El "
 "intérprete intentará entonces la operación reflejada, o alguna otra "
 "alternativa, dependiendo del operador). No debe evaluarse en un contexto "
@@ -1193,13 +1193,13 @@ msgid ""
 msgstr ""
 "Una función o método que utiliza la instrucción :keyword:`yield` (consulte "
 "la sección :ref:`yield`) se denomina :dfn:`función generadora`. Una función "
-"de este tipo, cuando se llama, siempre devuelve un objeto :term:`iterator` "
+"de este tipo, cuando se llama, siempre retorna un objeto :term:`iterator` "
 "que se puede usar para ejecutar el cuerpo de la función: llamar al método :"
 "meth:`iterator.__next__` del iterador hará que la función se ejecute hasta "
 "que proporcione un valor usando la declaración :keyword:`!yield`. Cuando la "
 "función ejecuta una declaración :keyword:`return` o se cae del final, se "
 "genera una excepción :exc:`StopIteration` y el iterador habrá llegado al "
-"final del conjunto de valores que se devolverán."
+"final del conjunto de valores que se retornarán."
 
 #: ../Doc/reference/datamodel.rst:667
 msgid "Coroutine functions"
@@ -1233,8 +1233,8 @@ msgid ""
 msgstr ""
 "Una función o método que se define utilizando :keyword:`async def` y que "
 "utiliza la instrucción :keyword:`yield` se denomina :dfn:`función de "
-"generador asíncrono`. Cuando se llama a una función de este tipo, devuelve "
-"un objeto :term:`asynchronous iterator` que se puede utilizar en una "
+"generador asíncrono`. Cuando se llama a una función de este tipo, retorna un "
+"objeto :term:`asynchronous iterator` que se puede utilizar en una "
 "instrucción :keyword:`async for` para ejecutar el cuerpo de la función."
 
 #: ../Doc/reference/datamodel.rst:680
@@ -1248,7 +1248,7 @@ msgid ""
 "yielded."
 msgstr ""
 "Llamar al método :meth:`aiterator.__anext__ <object.__anext__>` del iterador "
-"asíncrono devolverá un :term:`awaitable` que, cuando se espera, se ejecutará "
+"asíncrono retornará un :term:`awaitable` que, cuando se espera, se ejecutará "
 "hasta que proporcione un valor mediante la expresión :keyword:`yield`. "
 "Cuando la función ejecuta una declaración :keyword:`return` vacía o se cae "
 "del final, se genera una excepción :exc:`StopAsyncIteration` y el iterador "
@@ -1779,7 +1779,7 @@ msgid ""
 "Returns an iterable over the source code positions of each bytecode "
 "instruction in the code object."
 msgstr ""
-"Devuelve un iterable sobre las posiciones del código fuente de cada "
+"retorna un iterable sobre las posiciones del código fuente de cada "
 "instrucción de código de bytes en el objeto de código."
 
 #: ../Doc/reference/datamodel.rst:1024
@@ -1789,7 +1789,7 @@ msgid ""
 "the source code that compiled to the *i-th* instruction. Column information "
 "is 0-indexed utf-8 byte offsets on the given source line."
 msgstr ""
-"El iterador devuelve tuplas que contienen ``(start_line, end_line, "
+"El iterador retorna tuplas que contienen ``(start_line, end_line, "
 "start_column, end_column)``. La tupla *i-th* corresponde a la posición del "
 "código fuente que se compiló en la instrucción *i-th*. La información de la "
 "columna son compensaciones de utf-8 bytes indexadas en 0 en la línea de "
@@ -2224,7 +2224,7 @@ msgstr ""
 "Las implementaciones típicas crean una nueva instancia de la clase invocando "
 "el método :meth:`__new__` de la superclase usando ``super()."
 "__new__(cls[, ...])`` con los argumentos apropiados y luego modificando la "
-"instancia recién creada según sea necesario antes de devolverla."
+"instancia recién creada según sea necesario antes de retornarla."
 
 #: ../Doc/reference/datamodel.rst:1276
 msgid ""
@@ -2619,7 +2619,7 @@ msgid ""
 msgstr ""
 "Llamado por la función integrada :func:`hash` y para operaciones en miembros "
 "de colecciones con hash, incluidos :class:`set`, :class:`frozenset` y :class:"
-"`dict`. El método ``__hash__()`` debería devolver un número entero. La única "
+"`dict`. El método ``__hash__()`` debería retornar un número entero. La única "
 "propiedad requerida es que los objetos que se comparan iguales tengan el "
 "mismo valor hash; se recomienda mezclar los valores hash de los componentes "
 "del objeto que también desempeñan un papel en la comparación de los objetos, "
@@ -3225,8 +3225,8 @@ msgid ""
 "__get__(a, A)``.  If not a descriptor, ``x`` is returned unchanged."
 msgstr ""
 "Una búsqueda punteada como ``super(A, a).x`` busca en ``a.__class__."
-"__mro__`` una clase base ``B`` después de ``A`` y luego devuelve ``B."
-"__dict__['x'].__get__(a, A)``. Si no es un descriptor, ``x`` se devuelve sin "
+"__mro__`` una clase base ``B`` después de ``A`` y luego retorna ``B."
+"__dict__['x'].__get__(a, A)``. Si no es un descriptor, ``x`` se retorna sin "
 "cambios."
 
 #: ../Doc/reference/datamodel.rst:1862
@@ -3249,7 +3249,7 @@ msgstr ""
 "descriptor depende de qué métodos de descriptor se definan. Un descriptor "
 "puede definir cualquier combinación de :meth:`~object.__get__`, :meth:"
 "`~object.__set__` y :meth:`~object.__delete__`. Si no define :meth:"
-"`__get__`, el acceso al atributo devolverá el objeto descriptor en sí, a "
+"`__get__`, el acceso al atributo retornará el objeto descriptor en sí, a "
 "menos que haya un valor en el diccionario de instancias del objeto. Si el "
 "descriptor define :meth:`__set__` y/o :meth:`__delete__`, es un descriptor "
 "de datos; si no define ninguno, es un descriptor que no es de datos. "
@@ -3704,7 +3704,7 @@ msgstr ""
 "se llama ``namespace = metaclass.__prepare__(name, bases, **kwds)`` (donde "
 "los argumentos de palabras clave adicionales, si los hay, provienen de la "
 "definición de clase). El método ``__prepare__`` debe implementarse como :"
-"func:`classmethod <classmethod>`. El espacio de nombres devuelto por "
+"func:`classmethod <classmethod>`. El espacio de nombres retornado por "
 "``__prepare__`` se pasa a ``__new__``, pero cuando se crea el objeto de "
 "clase final, el espacio de nombres se copia en un nuevo ``dict``."
 
@@ -4099,7 +4099,7 @@ msgstr ""
 "corchetes llamará al método de instancia :meth:`~object.__getitem__` "
 "definido en la clase del objeto. Sin embargo, si el objeto que se suscribe "
 "es en sí mismo una clase, se puede llamar al método de clase :meth:`~object."
-"__class_getitem__` en su lugar. ``__class_getitem__()`` debería devolver un "
+"__class_getitem__` en su lugar. ``__class_getitem__()`` debería retornar un "
 "objeto :ref:`GenericAlias<types-genericalias>` si está definido "
 "correctamente."
 
@@ -4391,7 +4391,7 @@ msgid ""
 "of the container."
 msgstr ""
 "Se llama a este método cuando se requiere un :term:`iterator` para un "
-"contenedor. Este método debería devolver un nuevo objeto iterador que pueda "
+"contenedor. Este método debería retornar un nuevo objeto iterador que pueda "
 "iterar sobre todos los objetos del contenedor. Para las asignaciones, debe "
 "iterar sobre las claves del contenedor."
 
@@ -4525,7 +4525,7 @@ msgstr ""
 "diferentes tipos. [#]_ Por ejemplo, para evaluar la expresión ``x - y``, "
 "donde *y* es una instancia de una clase que tiene un método :meth:"
 "`__rsub__`, se llama a ``type(y).__rsub__(y, x)`` si ``type(x).__sub__(x, "
-"y)`` devuelve *NotImplemented*."
+"y)`` retorna *NotImplemented*."
 
 #: ../Doc/reference/datamodel.rst:2669
 msgid ""
@@ -4874,7 +4874,7 @@ msgid ""
 "keyword:`async def` functions are awaitable."
 msgstr ""
 "Un objeto :term:`awaitable` generalmente implementa un método :meth:`~object."
-"__await__`. Las funciones :term:`Coroutine objects <coroutine>` devueltas "
+"__await__`. Las funciones :term:`Coroutine objects <coroutine>` retornadas "
 "desde :keyword:`async def` están en espera."
 
 #: ../Doc/reference/datamodel.rst:2941
@@ -4883,7 +4883,7 @@ msgid ""
 "with :func:`types.coroutine` are also awaitable, but they do not implement :"
 "meth:`~object.__await__`."
 msgstr ""
-"Los objetos :term:`generator iterator` devueltos por generadores decorados "
+"Los objetos :term:`generator iterator` retornados por generadores decorados "
 "con :func:`types.coroutine` también están disponibles, pero no implementan :"
 "meth:`~object.__await__`."
 
@@ -4951,7 +4951,7 @@ msgid ""
 "value, described above."
 msgstr ""
 "Inicia o reanuda la ejecución de la rutina. Si *value* es ``None``, esto "
-"equivale a avanzar el iterador devuelto por :meth:`~object.__await__`. Si "
+"equivale a avanzar el iterador retornado por :meth:`~object.__await__`. Si "
 "*value* no es ``None``, este método delega al método :meth:`~generator.send` "
 "del iterador que provocó la suspensión de la rutina. El resultado (valor de "
 "retorno, :exc:`StopIteration` u otra excepción) es el mismo que cuando se "
@@ -5041,7 +5041,7 @@ msgid ""
 "that would resolve to an :term:`asynchronous iterator <asynchronous "
 "iterator>`."
 msgstr ""
-"Antes de Python 3.7, :meth:`~object.__aiter__` podía devolver un *awaitable* "
+"Antes de Python 3.7, :meth:`~object.__aiter__` podía retornar un *awaitable* "
 "que se resolvería en un :term:`asynchronous iterator <asynchronous "
 "iterator>`."
 
@@ -5051,8 +5051,8 @@ msgid ""
 "asynchronous iterator object.  Returning anything else will result in a :exc:"
 "`TypeError` error."
 msgstr ""
-"A partir de Python 3.7, :meth:`~object.__aiter__` debe devolver un objeto "
-"iterador asíncrono. Devolver cualquier otra cosa dará como resultado un "
+"A partir de Python 3.7, :meth:`~object.__aiter__` debe retornar un objeto "
+"iterador asíncrono. retornar cualquier otra cosa dará como resultado un "
 "error :exc:`TypeError`."
 
 #: ../Doc/reference/datamodel.rst:3061
