Apply suggestions from code review
Co-authored-by: Sofía Denner <sofi.denner@gmail.com>

--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -393,7 +393,7 @@ msgid ""
 "is supplied, the list is constructed from the elements resulting from the "
 "comprehension."
 msgstr ""
-"Un despliegue de lista yields un nuevo objeto lista, el contenido se "
+"Un despliegue de lista produce un nuevo objeto lista, el contenido se "
 "especifica por una lista de expresiones o una comprensión. Cuando se "
 "proporciona una lista de expresiones, sus elementos son evaluados desde la "
 "izquierda a la derecha y colocados en el objeto lista en ese orden. Cuando "
@@ -422,7 +422,7 @@ msgid ""
 "supplied, the set is constructed from the elements resulting from the "
 "comprehension."
 msgstr ""
-"Un despliegue de conjunto yields un nuevo objeto conjunto mutable, el "
+"Un despliegue de conjunto produce un nuevo objeto conjunto mutable, el "
 "contenido se especifica mediante una secuencia de expresiones o una "
 "comprensión. Cuando se proporciona una lista de expresiones separadas por "
 "comas, sus elementos son evaluados desde la izquierda a la derecha y "
@@ -451,7 +451,7 @@ msgstr ""
 
 #: ../Doc/reference/expressions.rst:316
 msgid "A dictionary display yields a new dictionary object."
-msgstr "Un despliegue de diccionario yields un nuevo objeto diccionario."
+msgstr "Un despliegue de diccionario produce un nuevo objeto diccionario."
 
 #: ../Doc/reference/expressions.rst:318
 msgid ""
@@ -542,7 +542,7 @@ msgid ""
 "same as for comprehensions, except that it is enclosed in parentheses "
 "instead of brackets or curly braces."
 msgstr ""
-"Una expresión de generador yields un nuevo objeto generador. Su sintaxis es "
+"Una expresión de generador produce un nuevo objeto generador. Su sintaxis es "
 "la misma que para las comprensiones, excepto que es encerrado en paréntesis "
 "en lugar de corchetes o llaves."
 
@@ -887,7 +887,7 @@ msgid ""
 msgstr ""
 "Reanuda la ejecución y \"envía\" un valor dentro de la función generadora. "
 "El argumento *value* se convierte en el resultado de la expresión yield "
-"actual. El método :meth:`send` retorna el siguiente valor yielded por el "
+"actual. El método :meth:`send` retorna el siguiente valor producido por el "
 "generador o genera :exc:`StopIteration` si el generador termina sin yield "
 "otro valor. Cuando se ejecuta :meth:`send` para comenzar el generador, debe "
 "ser invocado con :const:`None` como el argumento, debido a que no hay "
