--- a/faq/windows.po
+++ b/faq/windows.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2022-12-06 09:09+0100\n"
 "Last-Translator: Ruben Espinosa Perez <danna860@gmail.com>\n"
-"Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_AR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/faq/windows.rst:9
@@ -511,7 +511,8 @@ msgstr ""
 
 #: ../Doc/faq/windows.rst:281
 msgid "How do I solve the missing api-ms-win-crt-runtime-l1-1-0.dll error?"
-msgstr "¿Cómo resuelvo el error de api-ms-win-crt-runtime-l1-1-0.dll no encontrado?"
+msgstr ""
+"¿Cómo resuelvo el error de api-ms-win-crt-runtime-l1-1-0.dll no encontrado?"
 
 #: ../Doc/faq/windows.rst:283
 msgid ""
@@ -521,9 +522,9 @@ msgid ""
 "issue, visit the `Microsoft support page <https://support.microsoft.com/en-"
 "us/help/3118401/>`_ for guidance on manually installing the C Runtime update."
 msgstr ""
-E"Esto puede ocurrir en Python 3.5 y posteriores usando Windows 8.1 o anteriores "
-"sin que todas las actualizaciones hayan sido instaladas. Primero asegúrese que su "
-"sistema operativo sea compatible y esté actualizado, y si eso no resuelve el "
-"problema, visite la ` Página de soporte de Microsoft <https://support.microsoft.com/en-"
-"us/help/3118401/>`_ para obtener orientación sobre como instalar manualmente la "
-"actualización de C Runtime "
+"Esto puede ocurrir en Python 3.5 y posteriores usando Windows 8.1 o "
+"anteriores sin que todas las actualizaciones hayan sido instaladas. Primero "
+"asegúrese que su sistema operativo sea compatible y esté actualizado, y si "
+"eso no resuelve el problema, visite la ` Página de soporte de Microsoft "
+"<https://support.microsoft.com/en-us/help/3118401/>`_ para obtener "
+"orientación sobre como instalar manualmente la actualización de C Runtime "
