--- a/faq/windows.po
+++ b/faq/windows.po
@@ -526,5 +526,5 @@ msgstr ""
 "anteriores sin que todas las actualizaciones hayan sido instaladas. Primero "
 "asegúrese que su sistema operativo sea compatible y esté actualizado, y si "
 "eso no resuelve el problema, visite la ` Página de soporte de Microsoft "
-"<https://support.microsoft.com/en-us/help/3118401/>`_ para obtener "
+"`<https://support.microsoft.com/en-us/help/3118401/>`_ para obtener "
 "orientación sobre como instalar manualmente la actualización de C Runtime "
