trailing space issue

--- a/faq/windows.po
+++ b/faq/windows.po
@@ -525,6 +525,6 @@ msgstr ""
 "Esto puede ocurrir en Python 3.5 y posteriores usando Windows 8.1 o "
 "anteriores sin que todas las actualizaciones hayan sido instaladas. Primero "
 "asegúrese que su sistema operativo sea compatible y esté actualizado, y si "
-"eso no resuelve el problema, visite la ` Página de soporte de Microsoft "
-"`<https://support.microsoft.com/en-us/help/3118401/>`_ para obtener "
-"orientación sobre como instalar manualmente la actualización de C Runtime "
+"eso no resuelve el problema, visite la `Página de soporte de Microsoft "
+"<https://support.microsoft.com/en-us/help/3118401/>`_ para obtener "
+"orientación sobre como instalar manualmente la actualización de C Runtime."
