--- a/c-api/type.po
+++ b/c-api/type.po
@@ -179,8 +179,8 @@ msgid ""
 "Return the type's name. Equivalent to getting the type's ``__name__`` "
 "attribute."
 msgstr ""
-"Devuelve el nombre del tipo de objeto. Equivalente a obtener el atributo "
-"``__name__`` del objeto tipo."
+"Devuelve el nombre del tipo. Equivalente a obtener el atributo "
+"``__name__`` del tipo."
 
 #: ../Doc/c-api/type.rst:117
 msgid ""
@@ -249,7 +249,7 @@ msgstr ""
 "``Py_TYPE(self)`` puede ser una *subclass* de la clase deseada, y las "
 "subclases no están necesariamente definidas en el mismo módulo que su "
 "superclase. Consulte :c:type:`PyCMethod` para obtener la clase que define el "
-"método. Revisa :c:type:`PyCMethod` para los casos en los que no se puede "
+"método. Ver ::c:func:`PyType_GetModuleByDef` para los casos en los que no se puede "
 "usar ``PyCMethod``."
 
 #: ../Doc/c-api/type.rst:159
@@ -282,7 +282,7 @@ msgstr ""
 msgid ""
 "If no module is found, raises a :py:class:`TypeError` and returns ``NULL``."
 msgstr ""
-"Si no se encuentra ningún módulo, se genera un error de tipo :py:class:"
+"Si no se encuentra ningún módulo, lanza :py:class:"
 "`TypeError` y devuelve ``NULL``."
 
 #: ../Doc/c-api/type.rst:178
@@ -295,9 +295,9 @@ msgid ""
 msgstr ""
 "Esta función está pensada para ser utilizada junto con :c:func:"
 "`PyModule_GetState()` para obtener el estado del módulo de los métodos "
-"*slot* (como :c:member:`~PyTypeObject.tp_init` o :c:member:`~PyNumberMethods."
+"de ranura (como :c:member:`~PyTypeObject.tp_init` o :c:member:`~PyNumberMethods."
 "nb_add`) y en otros lugares donde la clase que define a un método no se "
-"puede pasar utilizando la convención de llamada de :c:type:`PyCMethod`."
+"puede pasar utilizando la convención de llamada :c:type:`PyCMethod`."
 
 #: ../Doc/c-api/type.rst:188
 msgid "Creating Heap-Allocated Types"
@@ -512,7 +512,7 @@ msgstr ""
 #: ../Doc/c-api/type.rst:299
 msgid "Slots in :c:type:`PyBufferProcs` may be set in the unlimited API."
 msgstr ""
-"Los *slots* en :c:type:`PyBufferProcs` se pueden configurar en la API "
+"Las ranuras en :c:type:`PyBufferProcs` se pueden configurar en la API "
 "ilimitada."
 
 #: ../Doc/c-api/type.rst:301
