Apply suggestions from code review

--- a/c-api/type.po
+++ b/c-api/type.po
@@ -187,7 +187,7 @@ msgid ""
 "Return the type's qualified name. Equivalent to getting the type's "
 "``__qualname__`` attribute."
 msgstr ""
-"Devuelve el nombre adecuado del tipo de objeto. Equivalente a obtener el "
+"Retorna el nombre adecuado del tipo de objeto. Equivalente a obtener el "
 "atributo ``__qualname__`` del objeto tipo."
 
 #: ../Doc/c-api/type.rst:124
@@ -248,7 +248,7 @@ msgstr ""
 "``PyType_GetModule(Py_TYPE(self))`` no devuelva el resultado deseado. "
 "``Py_TYPE(self)`` puede ser una *subclass* de la clase deseada, y las "
 "subclases no están necesariamente definidas en el mismo módulo que su "
-"superclase. Consulte :c:type:`PyCMethod` para obtener la clase que define el "
+"superclase. Consulte :c:func:`PyCMethod` para obtener la clase que define el "
 "método. Ver ::c:func:`PyType_GetModuleByDef` para los casos en los que no se puede "
 "usar ``PyCMethod``."
 
@@ -276,7 +276,7 @@ msgid ""
 "`PyModuleDef` *def*, and return that module."
 msgstr ""
 "Encuentra la primer superclase cuyo módulo fue creado a partir del :c:type:"
-"`PyModuleDef` *def* dado, y devuelve ese módulo."
+"`PyModuleDef` *def* dado, y retorna ese módulo."
 
 #: ../Doc/c-api/type.rst:176
 msgid ""
