Apply suggestions from code review

--- a/c-api/type.po
+++ b/c-api/type.po
@@ -245,7 +245,7 @@ msgid ""
 msgstr ""
 "Esta función se suele utilizar para obtener el módulo en el que se define un "
 "método. Tenga en cuenta que en un método de este tipo, es posible que "
-"``PyType_GetModule(Py_TYPE(self))`` no devuelva el resultado deseado. "
+"``PyType_GetModule(Py_TYPE(self))`` no retorne el resultado deseado. "
 "``Py_TYPE(self)`` puede ser una *subclass* de la clase deseada, y las "
 "subclases no están necesariamente definidas en el mismo módulo que su "
 "superclase. Consulte :c:func:`PyCMethod` para obtener la clase que define el "
