--- a/c-api/type.po
+++ b/c-api/type.po
@@ -179,8 +179,8 @@ msgid ""
 "Return the type's name. Equivalent to getting the type's ``__name__`` "
 "attribute."
 msgstr ""
-"Devuelve el nombre del tipo. Equivalente a obtener el atributo "
-"``__name__`` del tipo."
+"Devuelve el nombre del tipo. Equivalente a obtener el atributo ``__name__`` "
+"del tipo."
 
 #: ../Doc/c-api/type.rst:117
 msgid ""
@@ -249,8 +249,8 @@ msgstr ""
 "``Py_TYPE(self)`` puede ser una *subclass* de la clase deseada, y las "
 "subclases no están necesariamente definidas en el mismo módulo que su "
 "superclase. Consulte :c:func:`PyCMethod` para obtener la clase que define el "
-"método. Ver ::c:func:`PyType_GetModuleByDef` para los casos en los que no se puede "
-"usar ``PyCMethod``."
+"método. Ver ::c:func:`PyType_GetModuleByDef` para los casos en los que no se "
+"puede usar ``PyCMethod``."
 
 #: ../Doc/c-api/type.rst:159
 msgid ""
@@ -282,8 +282,8 @@ msgstr ""
 msgid ""
 "If no module is found, raises a :py:class:`TypeError` and returns ``NULL``."
 msgstr ""
-"Si no se encuentra ningún módulo, lanza :py:class:"
-"`TypeError` y devuelve ``NULL``."
+"Si no se encuentra ningún módulo, lanza :py:class:`TypeError` y devuelve "
+"``NULL``."
 
 #: ../Doc/c-api/type.rst:178
 msgid ""
@@ -294,8 +294,8 @@ msgid ""
 "type:`PyCMethod` calling convention."
 msgstr ""
 "Esta función está pensada para ser utilizada junto con :c:func:"
-"`PyModule_GetState()` para obtener el estado del módulo de los métodos "
-"de ranura (como :c:member:`~PyTypeObject.tp_init` o :c:member:`~PyNumberMethods."
+"`PyModule_GetState()` para obtener el estado del módulo de los métodos de "
+"ranura (como :c:member:`~PyTypeObject.tp_init` o :c:member:`~PyNumberMethods."
 "nb_add`) y en otros lugares donde la clase que define a un método no se "
 "puede pasar utilizando la convención de llamada :c:type:`PyCMethod`."
 
