Usar retorna en vez de devuelve

--- a/c-api/type.po
+++ b/c-api/type.po
@@ -73,7 +73,7 @@ msgid ""
 "flag bits are guaranteed to be stable across Python releases, but access to :"
 "c:member:`~PyTypeObject.tp_flags` itself is not part of the limited API."
 msgstr ""
-"Devuelve el miembro :c:member:`~PyTypeObject.tp_flags` de *type*. Esta "
+"Retorna el miembro :c:member:`~PyTypeObject.tp_flags` de *type*. Esta "
 "función está destinada principalmente para su uso con `Py_LIMITED_API`; se "
 "garantiza que los bits de bandera individuales serán estables en las "
 "versiones de Python, pero el acceso a :c:member:`~PyTypeObject.tp_flags` en "
@@ -179,7 +179,7 @@ msgid ""
 "Return the type's name. Equivalent to getting the type's ``__name__`` "
 "attribute."
 msgstr ""
-"Devuelve el nombre del tipo. Equivalente a obtener el atributo ``__name__`` "
+"Retorna el nombre del tipo. Equivalente a obtener el atributo ``__name__`` "
 "del tipo."
 
 #: ../Doc/c-api/type.rst:117
@@ -282,7 +282,7 @@ msgstr ""
 msgid ""
 "If no module is found, raises a :py:class:`TypeError` and returns ``NULL``."
 msgstr ""
-"Si no se encuentra ningún módulo, lanza :py:class:`TypeError` y devuelve "
+"Si no se encuentra ningún módulo, lanza :py:class:`TypeError` y retorna "
 "``NULL``."
 
 #: ../Doc/c-api/type.rst:178
