Traducido archivo c-api/type.po (#2370)
Closes #2053

---------

Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>
Co-authored-by: Andrea Alegre <devel@andrea.mozmail.com>
Co-authored-by: Cristián Maureira-Fredes <Cristian.Maureira-Fredes@qt.io>

--- a/c-api/type.po
+++ b/c-api/type.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-02 01:37+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-04-12 00:54-0600\n"
+"Last-Translator: Gonzalo Martinez <gmtzoliva29@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/c-api/type.rst:6
 msgid "Type Objects"
@@ -66,7 +67,6 @@ msgstr ""
 "versión actual."
 
 #: ../Doc/c-api/type.rst:42
-#, fuzzy
 msgid ""
 "Return the :c:member:`~PyTypeObject.tp_flags` member of *type*. This "
 "function is primarily meant for use with ``Py_LIMITED_API``; the individual "
@@ -75,9 +75,9 @@ msgid ""
 msgstr ""
 "Retorna el miembro :c:member:`~PyTypeObject.tp_flags` de *type*. Esta "
 "función está destinada principalmente para su uso con `Py_LIMITED_API`; se "
-"garantiza que los bits de bandera (*flag*) individuales serán estables en "
-"las versiones de Python, pero el acceso a :c:member:`~PyTypeObject.tp_flags` "
-"en sí mismo no forma parte de la API limitada."
+"garantiza que los bits de bandera individuales serán estables en las "
+"versiones de Python, pero el acceso a :c:member:`~PyTypeObject.tp_flags` en "
+"sí mismo no forma parte de la API limitada."
 
 #: ../Doc/c-api/type.rst:49
 msgid "The return type is now ``unsigned long`` rather than ``long``."
@@ -179,12 +179,16 @@ msgid ""
 "Return the type's name. Equivalent to getting the type's ``__name__`` "
 "attribute."
 msgstr ""
+"Retorna el nombre del tipo. Equivalente a obtener el atributo ``__name__`` "
+"del tipo."
 
 #: ../Doc/c-api/type.rst:117
 msgid ""
 "Return the type's qualified name. Equivalent to getting the type's "
 "``__qualname__`` attribute."
 msgstr ""
+"Retorna el nombre adecuado del tipo de objeto. Equivalente a obtener el "
+"atributo ``__qualname__`` del objeto tipo."
 
 #: ../Doc/c-api/type.rst:124
 msgid ""
@@ -230,7 +234,6 @@ msgstr ""
 "`TypeError` y retorna ``NULL``."
 
 #: ../Doc/c-api/type.rst:146
-#, fuzzy
 msgid ""
 "This function is usually used to get the module in which a method is "
 "defined. Note that in such a method, ``PyType_GetModule(Py_TYPE(self))`` may "
@@ -245,8 +248,9 @@ msgstr ""
 "``PyType_GetModule(Py_TYPE(self))`` no retorne el resultado deseado. "
 "``Py_TYPE(self)`` puede ser una *subclass* de la clase deseada, y las "
 "subclases no están necesariamente definidas en el mismo módulo que su "
-"superclase. Consulte :c:type:`PyCMethod` para obtener la clase que define el "
-"método."
+"superclase. Consulte :c:func:`PyCMethod` para obtener la clase que define el "
+"método. Ver ::c:func:`PyType_GetModuleByDef` para los casos en los que no se "
+"puede usar ``PyCMethod``."
 
 #: ../Doc/c-api/type.rst:159
 msgid ""
@@ -271,14 +275,15 @@ msgid ""
 "Find the first superclass whose module was created from the given :c:type:"
 "`PyModuleDef` *def*, and return that module."
 msgstr ""
+"Encuentra la primer superclase cuyo módulo fue creado a partir del :c:type:"
+"`PyModuleDef` *def* dado, y retorna ese módulo."
 
 #: ../Doc/c-api/type.rst:176
-#, fuzzy
 msgid ""
 "If no module is found, raises a :py:class:`TypeError` and returns ``NULL``."
 msgstr ""
-"Si no hay ningún módulo asociado con el tipo dado, establece :py:class:"
-"`TypeError` y retorna ``NULL``."
+"Si no se encuentra ningún módulo, lanza :py:class:`TypeError` y retorna "
+"``NULL``."
 
 #: ../Doc/c-api/type.rst:178
 msgid ""
@@ -288,6 +293,11 @@ msgid ""
 "other places where a method's defining class cannot be passed using the :c:"
 "type:`PyCMethod` calling convention."
 msgstr ""
+"Esta función está pensada para ser utilizada junto con :c:func:"
+"`PyModule_GetState()` para obtener el estado del módulo de los métodos de "
+"ranura (como :c:member:`~PyTypeObject.tp_init` o :c:member:`~PyNumberMethods."
+"nb_add`) y en otros lugares donde la clase que define a un método no se "
+"puede pasar utilizando la convención de llamada :c:type:`PyCMethod`."
 
 #: ../Doc/c-api/type.rst:188
 msgid "Creating Heap-Allocated Types"
@@ -500,7 +510,6 @@ msgstr ""
 "*bases* de :py:func:`PyType_FromSpecWithBases` en su lugar."
 
 #: ../Doc/c-api/type.rst:299
-#, fuzzy
 msgid "Slots in :c:type:`PyBufferProcs` may be set in the unlimited API."
 msgstr ""
 "Las ranuras en :c:type:`PyBufferProcs` se pueden configurar en la API "
@@ -511,6 +520,8 @@ msgid ""
 ":c:member:`~PyBufferProcs.bf_getbuffer` and :c:member:`~PyBufferProcs."
 "bf_releasebuffer` are now available under the limited API."
 msgstr ""
+":c:member:`~PyBufferProcs.bf_getbuffer` and :c:member:`~PyBufferProcs."
+"bf_releasebuffer` ahora están disponibles en la API limitada."
 
 #: ../Doc/c-api/type.rst:308
 msgid ""
