--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -11,30 +11,31 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2020-05-15 23:37-0300\n"
+"PO-Revision-Date: 2023-10-07 23:52-0500\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.4\n"
 
 #: ../Doc/tutorial/stdlib.rst:5
 msgid "Brief Tour of the Standard Library"
-msgstr "Pequeño paseo por la Biblioteca Estándar"
+msgstr "Breve Recorrido por la Biblioteca Estándar"
 
 #: ../Doc/tutorial/stdlib.rst:11
 msgid "Operating System Interface"
-msgstr "Interfaz al sistema operativo"
+msgstr "Interfaz del Sistema Operativo"
 
 #: ../Doc/tutorial/stdlib.rst:13
 msgid ""
 "The :mod:`os` module provides dozens of functions for interacting with the "
 "operating system::"
 msgstr ""
-"El módulo :mod:`os` provee docenas de funciones para interactuar con el "
+"El módulo :mod:`os` proporciona docenas de funciones para interactuar con el "
 "sistema operativo::"
 
 #: ../Doc/tutorial/stdlib.rst:23
@@ -43,9 +44,9 @@ msgid ""
 "This will keep :func:`os.open` from shadowing the built-in :func:`open` "
 "function which operates much differently."
 msgstr ""
-"Asegúrate de usar el estilo ``import os`` en lugar de ``from os import *``. "
-"Esto evitará que :func:`os.open` oculte a la función integrada :func:`open`, "
-"que trabaja bastante diferente."
+"Asegúrate de utilizar el estilo ``import os`` en lugar de ``from os import "
+"*``. Esto evitará que :func:`os.open` oculte a la función integrada :func:"
+"`open`, que funciona de manera muy diferente."
 
 #: ../Doc/tutorial/stdlib.rst:29
 msgid ""
@@ -60,8 +61,9 @@ msgid ""
 "For daily file and directory management tasks, the :mod:`shutil` module "
 "provides a higher level interface that is easier to use::"
 msgstr ""
-"Para tareas diarias de administración de archivos y directorios, el módulo :"
-"mod:`shutil` provee una interfaz de más alto nivel que es más fácil de usar::"
+"Para las tareas diarias de administración de archivos y directorios, el "
+"módulo :mod:`shutil` proporciona una interfaz en un nivel superior que es "
+"más fácil de usar::"
 
 #: ../Doc/tutorial/stdlib.rst:51
 msgid "File Wildcards"
@@ -72,12 +74,12 @@ msgid ""
 "The :mod:`glob` module provides a function for making file lists from "
 "directory wildcard searches::"
 msgstr ""
-"El módulo :mod:`glob` provee una función para hacer listas de archivos a "
-"partir de búsquedas con comodines en directorios::"
+"El módulo :mod:`glob` proporciona una función para hacer listas de archivos "
+"a partir de búsquedas con comodines en directorios::"
 
 #: ../Doc/tutorial/stdlib.rst:64
 msgid "Command Line Arguments"
-msgstr "Argumentos de linea de órdenes"
+msgstr "Argumentos de Líneas de Comandos"
 
 #: ../Doc/tutorial/stdlib.rst:66
 msgid ""
@@ -86,10 +88,10 @@ msgid ""
 "For instance the following output results from running ``python demo.py one "
 "two three`` at the command line::"
 msgstr ""
-"Los programas frecuentemente necesitan procesar argumentos de linea de "
-"órdenes. Estos argumentos se almacenan en el atributo *argv* del módulo :mod:"
-"`sys` como una lista.  Por ejemplo, la siguiente salida resulta de ejecutar "
-"``python demo.py uno dos tres`` en la línea de órdenes::"
+"Los scripts de utilidades comunes a menudo necesitan procesar argumentos de "
+"línea de comandos. Estos argumentos se almacenan en el atributo *argv* del "
+"módulo :mod:`sys` como una lista.  Por ejemplo, el siguiente resultado de la "
+"salida de ejecución ``python demo.py uno dos tres`` en la línea de comandos::"
 
 #: ../Doc/tutorial/stdlib.rst:75
 msgid ""
@@ -107,13 +109,13 @@ msgid ""
 "txt``, the script sets ``args.lines`` to ``5`` and ``args.filenames`` to "
 "``['alpha.txt', 'beta.txt']``."
 msgstr ""
-"Cuando se ejecuta por línea de comandos haciendo ``python top.py --lines=5 "
+"Cuando se ejecuta en la línea de comandos con ``python top.py --lines=5 "
 "alpha.txt beta.txt``, el *script* establece ``args.lines`` a ``5`` y ``args."
 "filenames`` a ``['alpha.txt', 'beta.txt']``."
 
 #: ../Doc/tutorial/stdlib.rst:97
 msgid "Error Output Redirection and Program Termination"
-msgstr "Redirigir la salida de error y finalización del programa"
+msgstr "Desvío de Error de salida y Terminación del Programa"
 
 #: ../Doc/tutorial/stdlib.rst:99
 msgid ""
@@ -121,7 +123,7 @@ msgid ""
 "*stderr*. The latter is useful for emitting warnings and error messages to "
 "make them visible even when *stdout* has been redirected::"
 msgstr ""
-"El módulo :mod:`sys` también tiene atributos para *stdin*, *stdout*, y "
+"El módulo :mod:`sys` también sus tiene atributos para *stdin*, *stdout*, y "
 "*stderr*.  Este último es útil para emitir mensajes de alerta y error para "
 "que se vean incluso cuando se haya redirigido *stdout*::"
 
@@ -131,7 +133,7 @@ msgstr "La forma más directa de terminar un programa es usar ``sys.exit()``."
 
 #: ../Doc/tutorial/stdlib.rst:112
 msgid "String Pattern Matching"
-msgstr "Coincidencia en patrones de cadenas"
+msgstr "Coincidencia de Patrones de Cadena"
 
 #: ../Doc/tutorial/stdlib.rst:114
 msgid ""
@@ -149,26 +151,26 @@ msgid ""
 "When only simple capabilities are needed, string methods are preferred "
 "because they are easier to read and debug::"
 msgstr ""
-"Cuando se necesita algo más sencillo solamente, se prefieren los métodos de "
-"las cadenas porque son más fáciles de leer y depurar::"
+"Cuando sólo se necesitan funciones sencillas, se prefieren los métodos de "
+"cadenas porque son más fáciles de leer y depurar::"
 
 #: ../Doc/tutorial/stdlib.rst:134
 msgid "Mathematics"
-msgstr "Matemática"
+msgstr "Matemáticas"
 
 #: ../Doc/tutorial/stdlib.rst:136
 msgid ""
 "The :mod:`math` module gives access to the underlying C library functions "
 "for floating point math::"
 msgstr ""
-"El módulo :mod:`math` permite el acceso a las funciones de la biblioteca C "
-"subyacente para la matemática de punto flotante::"
+"El módulo :mod:`math` da acceso a las funciones subyacentes de la biblioteca "
+"C para operaciones matemáticas con punto flotante::"
 
 #: ../Doc/tutorial/stdlib.rst:145
 msgid "The :mod:`random` module provides tools for making random selections::"
 msgstr ""
-"El módulo :mod:`random` provee herramientas para realizar selecciones al "
-"azar::"
+"El módulo :mod:`random` provee herramientas para realizar selecciones "
+"aleatorias::"
 
 #: ../Doc/tutorial/stdlib.rst:157
 msgid ""
@@ -198,17 +200,17 @@ msgid ""
 msgstr ""
 "Hay varios módulos para acceder a Internet y procesar sus protocolos.  Dos "
 "de los más simples son :mod:`urllib.request` para traer data de URLs y :mod:"
-"`smtplib` para mandar correos::"
+"`smtplib` para enviar correos::"
 
 #: ../Doc/tutorial/stdlib.rst:200
 msgid "(Note that the second example needs a mailserver running on localhost.)"
 msgstr ""
-"(Notá que el segundo ejemplo necesita un servidor de correo corriendo en la "
+"(Nota que el segundo ejemplo necesita un servidor de correo corriendo en la "
 "máquina local)"
 
 #: ../Doc/tutorial/stdlib.rst:206
 msgid "Dates and Times"
-msgstr "Fechas y tiempos"
+msgstr "Fechas y Tiempos"
 
 #: ../Doc/tutorial/stdlib.rst:208
 msgid ""
@@ -220,13 +222,13 @@ msgid ""
 msgstr ""
 "El módulo :mod:`datetime` ofrece clases para gestionar fechas y tiempos "
 "tanto de manera simple como compleja.  Aunque soporta aritmética sobre "
-"fechas y tiempos, el foco de la implementación es en la extracción eficiente "
-"de partes para gestionarlas o formatear la salida.  El módulo también "
-"soporta objetos que son conscientes de la zona horaria. ::"
+"fechas y tiempos, la aplicación se centra en la extracción eficaz de "
+"elementos para el formateo y la manipulación de los datos de salida.  El "
+"módulo también admite objetos que tienen en cuenta la zona horaria. ::"
 
 #: ../Doc/tutorial/stdlib.rst:232
 msgid "Data Compression"
-msgstr "Compresión de datos"
+msgstr "Compresión de Datos"
 
 #: ../Doc/tutorial/stdlib.rst:234
 msgid ""
@@ -234,13 +236,13 @@ msgid ""
 "modules including: :mod:`zlib`, :mod:`gzip`, :mod:`bz2`, :mod:`lzma`, :mod:"
 "`zipfile` and :mod:`tarfile`. ::"
 msgstr ""
-"Los formatos para archivar y comprimir datos se soportan directamente con "
-"los módulos: :mod:`zlib`, :mod:`gzip`, :mod:`bz2`, :mod:`lzma`, :mod:"
-"`zipfile` y :mod:`tarfile`.  ::"
+"Los módulos admiten directamente los formatos más comunes de archivo y "
+"compresión de datos, entre ellos : :mod:`zlib`, :mod:`gzip`, :mod:`bz2`, :"
+"mod:`lzma`, :mod:`zipfile` y :mod:`tarfile`.  ::"
 
 #: ../Doc/tutorial/stdlib.rst:254
 msgid "Performance Measurement"
-msgstr "Medición de rendimiento"
+msgstr "Medición de Rendimiento"
 
 #: ../Doc/tutorial/stdlib.rst:256
 msgid ""
@@ -248,10 +250,10 @@ msgid ""
 "performance of different approaches to the same problem. Python provides a "
 "measurement tool that answers those questions immediately."
 msgstr ""
-"Algunos usuarios de Python desarrollan un profundo interés en saber el "
+"Algunos usuarios de Python desarrollan un profundo interés en conocer el "
 "rendimiento relativo de las diferentes soluciones al mismo problema.  Python "
-"provee una herramienta de medición que responde esas preguntas "
-"inmediatamente."
+"provee una herramienta de medición que responde inmediatamente a esas "
+"preguntas."
 
 #: ../Doc/tutorial/stdlib.rst:260
 msgid ""
@@ -262,7 +264,7 @@ msgstr ""
 "Por ejemplo, puede ser tentador usar la característica de empaquetado y "
 "desempaquetado de las tuplas en lugar de la solución tradicional para "
 "intercambiar argumentos.  El módulo :mod:`timeit` muestra rápidamente una "
-"modesta ventaja de rendimiento::"
+"ligera ventaja de rendimiento::"
 
 #: ../Doc/tutorial/stdlib.rst:270
 msgid ""
@@ -276,7 +278,7 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:278
 msgid "Quality Control"
-msgstr "Control de calidad"
+msgstr "Control de Calidad"
 
 #: ../Doc/tutorial/stdlib.rst:280
 msgid ""
@@ -284,9 +286,9 @@ msgid ""
 "function as it is developed and to run those tests frequently during the "
 "development process."
 msgstr ""
-"Una forma para desarrollar software de alta calidad es escribir pruebas para "
-"cada función mientras se la desarrolla, y correr esas pruebas frecuentemente "
-"durante el proceso de desarrollo."
+"Una forma para desarrollar software de alta calidad consiste en escribir "
+"pruebas para cada función mientras se desarrolla y correr esas pruebas "
+"frecuentemente durante el proceso de desarrollo."
 
 #: ../Doc/tutorial/stdlib.rst:284
 msgid ""
@@ -311,13 +313,13 @@ msgid ""
 "module, but it allows a more comprehensive set of tests to be maintained in "
 "a separate file::"
 msgstr ""
-"El módulo :mod:`unittest` necesita más esfuerzo que el módulo :mod:"
-"`doctest`, pero permite que se mantenga en un archivo separado un conjunto "
-"más comprensivo de pruebas::"
+"El módulo :mod:`unittest` no es tan sencillo como el módulo :mod:`doctest`, "
+"pero permite mantener un conjunto más completo de pruebas en un archivo "
+"independiente::"
 
 #: ../Doc/tutorial/stdlib.rst:324
 msgid "Batteries Included"
-msgstr "Las pilas incluidas"
+msgstr "Pilas Incluidas"
 
 #: ../Doc/tutorial/stdlib.rst:326
 msgid ""
@@ -330,16 +332,15 @@ msgstr ""
 "ejemplo:"
 
 #: ../Doc/tutorial/stdlib.rst:329
-#, fuzzy
 msgid ""
 "The :mod:`xmlrpc.client` and :mod:`xmlrpc.server` modules make implementing "
 "remote procedure calls into an almost trivial task.  Despite the modules' "
 "names, no direct knowledge or handling of XML is needed."
 msgstr ""
-"Los módulo :mod:`xmlrpc.client` y :mod:`xmlrpc.server` convierten una "
-"implementación de la llamada a un procedimiento en una tarea casi trivial. A "
-"pesar de los nombres de los nombres, no se necesita ningún conocimiento o "
-"manejo de archivos XML."
+"Los módulos :mod:`xmlrpc.client` y :mod:`xmlrpc.server` convierten la "
+"implementación de llamadas a procedimientos remotos en una tarea casi "
+"trivial.  A pesar de los nombres de los módulos, no se necesita ningún "
+"conocimiento o manejo directo de XML."
 
 #: ../Doc/tutorial/stdlib.rst:333
 msgid ""
@@ -369,7 +370,7 @@ msgid ""
 "applications and other tools."
 msgstr ""
 "El paquete :mod:`json` proporciona un sólido soporte para analizar este "
-"popular formato de intercambio de datos.  El módulo :mod:`csv` admite la "
+"popular formato de intercambio de datos.  El módulo :mod:`csv` permite la "
 "lectura y escritura directa de archivos en formato de valor separado por "
 "comas, comúnmente compatible con bases de datos y hojas de cálculo.  El "
 "procesamiento XML es compatible con los paquetes :mod:`xml.etree."
@@ -383,9 +384,10 @@ msgid ""
 "providing a persistent database that can be updated and accessed using "
 "slightly nonstandard SQL syntax."
 msgstr ""
-"El módulo :mod:`sqlite3` es un *wrapper* para la biblioteca de bases de "
-"datos SQLite, proporcionando una base de datos persistente que se puede "
-"actualizar y acceder mediante una sintaxis SQL ligeramente no estándar."
+"El módulo :mod:`sqlite3` es un empaquetador de la biblioteca de bases de "
+"datos SQLite, que proporciona una base de datos constante que se puede "
+"actualizar y a la que se puede acceder utilizando una sintaxis SQL "
+"ligeramente no estándar."
 
 #: ../Doc/tutorial/stdlib.rst:353
 msgid ""
